# bymr-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
bymr_api/: __init__.py  client.py  exceptions.py  models.py  templates.py
examples/: cheat.ipynb  game_state.json  user.json
